// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionListItem should render a received transaction 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-dotted cursor-pointer border-theme-neutral-300"
        data-testid="transaction__row"
      >
        <td
          class="w-48 py-1 text-sm text-theme-neutral-600"
        >
           
          17 Mar 2020 22:02:10
           
        </td>
        <td
          class="w-32 py-5 mt-1"
        >
          <div
            class="sc-AxirZ cZokSJ border-theme-success-300 text-theme-success-400 -mr-1"
          >
            <div
              class="sc-AxiKw jXNNYH"
              height="40"
              width="40"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxirZ efFWdY"
          />
        </td>
        <td
          class="w-56"
        >
          <div
            class="inline-block truncate align-middle"
          >
            <span
              class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
              data-testid="address__wallet-name"
            >
              My Wallet
            </span>
            <span
              class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              ASuusXSW9k…P6T9GQ3kqT
            </span>
          </div>
        </td>
        <td
          class="py-1 text-sm font-bold text-center"
        />
        <td
          class="text-sm text-right w-36"
        >
          <div
            class="sc-AxhCb jEeydN"
            color="success"
          >
            100 BTC
          </div>
        </td>
        <td
          class="w-32 py-1 text-sm font-semibold text-right text-theme-neutral-500"
        >
          <div>
            1,000,000 USD
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TransactionListItem should render a send transaction 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-dotted cursor-pointer border-theme-neutral-300"
        data-testid="transaction__row"
      >
        <td
          class="w-48 py-1 text-sm text-theme-neutral-600"
        >
           
          17 Mar 2020 22:02:10
           
        </td>
        <td
          class="w-32 py-5 mt-1"
        >
          <div
            class="sc-AxirZ cZokSJ border-theme-danger-200 text-theme-danger-400 -mr-1"
          >
            <div
              class="sc-AxiKw jXNNYH"
              height="40"
              width="40"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxirZ efFWdY"
          />
        </td>
        <td
          class="w-56"
        >
          <div
            class="inline-block truncate align-middle"
          >
            <span
              class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
              data-testid="address__wallet-name"
            >
              My Wallet
            </span>
            <span
              class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              ASuusXSW9k…P6T9GQ3kqT
            </span>
          </div>
        </td>
        <td
          class="py-1 text-sm font-bold text-center"
        />
        <td
          class="text-sm text-right w-36"
        >
          <div
            class="sc-AxhCb fgIdEA"
            color="danger"
          >
            100 BTC
          </div>
        </td>
        <td
          class="w-32 py-1 text-sm font-semibold text-right text-theme-neutral-500"
        >
          <div>
            1,000,000 USD
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TransactionListItem should render compact variant 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b cursor-pointer border-theme-neutral-200"
        data-testid="transaction__row"
      >
        <td
          class="w-20 py-4 mt-1"
        >
          <div
            class="sc-AxirZ dVFFmZ border-theme-success-300 text-theme-success-400 -mr-1"
          >
            <div
              class="sc-AxiKw jXNNYH"
              height="40"
              width="40"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxirZ sHsrA"
          />
        </td>
        <td
          class="w-56 py-1"
        >
          <div
            class="inline-block truncate align-middle"
          >
            <span
              class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-sm"
              data-testid="address__wallet-name"
            >
              My Wallet
            </span>
            <span
              class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-sm"
              data-testid="address__wallet-address"
            >
              ASuusX…GQ3kqT
            </span>
          </div>
        </td>
        <td
          class="py-1 text-sm text-right"
        >
          <div
            class="sc-AxhCb jEeydN"
            color="success"
          >
            100 BTC
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
